# labs

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  DECISIONS.xml  README.md  biome.json  config.json  package.json  tsconfig.json
.agents/: skills.json  (+1 more)
suites/anchor/: Cargo.toml
suites/anchor/apple/: build-binding-release-artifacts.sh
suites/anchor/apple/Anchor/: Signing.xcconfig  project.yml
suites/anchor/apple/Anchor/Anchor/: AnchorApp.swift  ContentView.swift
suites/anchor/apple/Anchor/Anchor/Models/: NotePreview.swift
suites/anchor/apple/Anchor/Anchor/Services/: AnchorCoreProjectionClient.swift
suites/anchor/apple/Anchor/Anchor/Stores/: WorkspacePreviewStore.swift
suites/anchor/apple/Anchor/Anchor/Views/: EditorView.swift  InspectorView.swift  SidebarView.swift  TextKitNoteBodyView.swift
suites/anchor/apple/Anchor/AnchorUITests/: AnchorShellUITests.swift
suites/anchor/apple/Anchor/AnchorUnitTests/: ProjectionMappingTests.swift
suites/anchor/apple/Anchor/Scripts/: build-anchor-core-ffi.sh
suites/anchor/apple/AnchorAppleSpike/: Package.swift
suites/anchor/apple/AnchorAppleSpike/Sources/AnchorAppleSmoke/: main.swift
suites/anchor/apple/AnchorAppleSpike/Sources/AnchorCoreBindings/: AnchorCoreBindings.swift
suites/anchor/apple/AnchorAppleSpike/Sources/AnchorCoreC/: empty.c
suites/anchor/apple/AnchorAppleSpike/Sources/AnchorICloudDriveProbe/: AnchorICloudDriveProbe.swift
suites/anchor/apple/AnchorAppleSpike/Sources/AnchorTextKitProbe/: AnchorTextKitProbe.swift
suites/anchor/apple/AnchorAppleSpike/Sources/AnchorTextKitSmoke/: main.swift
suites/anchor/apple/AnchorCoreBindings/: Package.swift
suites/anchor/apple/AnchorCoreBindings/Sources/AnchorCoreBindings/: AnchorCoreBindings.swift
suites/anchor/apple/AnchorMacICloudProbe/: AnchorMacProbe.entitlements  AnchorMacProbeInfo.plist
suites/anchor/apple/AnchorMacICloudProbe/AnchorMacICloudProbe/: AnchorMacICloudProbeApp.swift  ContentView.swift  ICloudRuntimeProbe.swift
suites/anchor/apple/AnchorMacICloudProbe/AnchorMacICloudProbe.xcodeproj/: project.pbxproj
suites/anchor/apple/ffi/: Cargo.toml
suites/anchor/apple/ffi/include/: AnchorCoreFFI.h  module.modulemap
suites/anchor/apple/ffi/src/: lib.rs
suites/anchor/apple/macos-icloud-probe/: AnchorMacICloudProbe.entitlements  AnchorMacICloudProbe.swift
suites/anchor/apple/uniffi/: Cargo.toml  build.rs
suites/anchor/apple/uniffi/SwiftSmoke/: smoke.swift
suites/anchor/apple/uniffi/src/: anchor_core_uniffi.udl  lib.rs
suites/anchor/cli/: Cargo.toml  README.md
suites/anchor/cli/src/: main.rs  output.rs  vault.rs
suites/anchor/cli/tests/: cli.rs
suites/anchor/core/: Cargo.toml  README.md
suites/anchor/core/src/: agent_fixtures.rs  canonical.rs  codec.rs  diff3.rs  domain.rs  dto.rs  editor.rs  hash.rs  hlc.rs  id.rs  importer.rs  ingest.rs  lattice.rs  lib.rs  marks.rs  mirror.rs  model.rs  op.rs  operations.rs  order.rs  orset.rs  replay.rs  retention.rs  segment.rs  serve.rs  stale.rs  sync_port.rs  vault.rs
suites/anchor/core/tests/: blake3_vectors.rs  canonical.rs  cli_contract.rs  codec.rs  cross_target_vector_harness.rs  determinism_vectors.rs  diff3_body.rs  dispatch_invariant.rs  dto_surface.rs  editor_intents.rs  editor_surface.rs  identity.rs  import_corpus.rs  import_export.rs  ingestion.rs  intent_rebase.rs  journal_restore.rs  life_lattice.rs  lifecycle.rs  location_merge.rs  mirror_parity.rs  op_shape_freeze.rs  order.rs  orset_tags.rs  renormalize.rs  replay_fold.rs  resolve.rs  retention.rs  run-cross-target-vectors.sh  scale_bench.rs  segment_budget.rs  serve_smoke.rs  stale_guard.rs  structural_dispatch.rs  sync_port.rs
suites/anchor/core/tests/common/: mod.rs
suites/anchor/core/tests/fixtures/: complex-note.md
suites/anchor/desktop/: package.json
suites/anchor/desktop/demo/vault/: .gitignore
suites/anchor/desktop/src-tauri/: Cargo.toml  tauri.conf.json
suites/anchor/desktop/src-tauri/capabilities/: default.json
suites/anchor/desktop/src-tauri/src/: main.rs
suites/anchor/editor/: package.json  tsconfig.json
suites/anchor/editor/docs/: test-strategy.md
suites/anchor/editor/src/: autosave-controller.ts  complex-note.ts  index.ts  keymap.ts
suites/anchor/editor/src/__tests__/: Editor.component.test.tsx  autosave-controller.test.ts  corpus-fidelity.test.ts  decorations.test.ts  interaction.test.ts
suites/anchor/editor/src/editor/: Editor.tsx  EditorStatus.tsx
suites/anchor/editor/src/rendering/: decorations.ts  selection.ts  solid-widget.tsx
suites/anchor/scripts/: build-tauri-sidecar.ts
suites/anchor/web/: index.html  package.json  tsconfig.json  vite.config.ts
suites/anchor/web/e2e/: editor.e2e.test.ts
suites/anchor/web/e2e/harness/: editor-webview-harness.ts  editor-webview-matrix.ts
suites/anchor/web/scripts/: dev.ts  e2e.ts
suites/anchor/web/src/: App.tsx  main.tsx  styles.css
suites/anchor/web/src/backend/: cli-install.ts  http-operation-core.ts  index.ts
suites/anchor/web/src/components/: AgentTranscript.tsx  SettingsDialog.tsx
suites/anchor/web/src/domain/: agent-session.ts  types.ts
suites/anchor/web/src/lib/: anchor-context.tsx  appearance.tsx  theme.test.ts  theme.tsx
suites/anchor/web/src/routes/: -shared.tsx  __root.tsx  agents.tsx  graph.tsx  index.tsx  notes.$noteId.tsx  objects.tsx  playground.tsx  search.tsx  settings.tsx  today.tsx
(+511 files in other folders)
