# Anchor Rust workspace.
#
# `core` is the platform-agnostic deterministic truth layer (no_std + alloc,
# zero deps — it alone carries the cross-target wasm32/android guarantee).
# `cli` is the local structured command contract (D31 Phase-2, user-approved
# 2026-06-10): a std host binary that is a pure dispatch shell over `core`.
# The CP-0 approved Option A layout also reserves `apple` (Xcode workspace,
# owned by Codex).
#
# This file does not touch the Bun workspace: there is intentionally no
# `package.json` under suites/anchor/** (D02 — never add a placeholder
# package.json to satisfy the `suites/*/*` glob).

[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[profile.release]
# Deterministic, panic=abort keeps the FFI surface simple for the binding spike.
panic = "abort"
