[package]
name = "anchor-core"
version = "0.1.0"
edition = "2021"
description = "Anchor semantic operation core"

[lib]
name = "anchor_core"
path = "src/lib.rs"

[[bin]]
name = "anchor-cli"
path = "src/bin/anchor-cli.rs"

[dependencies]
axum = { version = "0.8.9", features = ["json", "tokio"] }
chrono = "0.4.44"
clap = { version = "4", features = ["derive", "env"] }
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
bytes = "1.11.1"
http = "1.4.1"
http-body-util = "0.1.3"
tempfile = "3.19.1"
tower = { version = "0.5.3", features = ["util"] }
