[package]
name = "anchor-desktop"
version = "0.1.0"
description = "Anchor desktop app"
edition = "2021"

[[bin]]
name = "anchor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anchor-core = { path = "../../core" }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.4.1"
